# rusty-chunkenc

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: blog-post.md
golang-tests/: README.md  go.mod  main.go
golang-tests/chunkenc/: bstream.go  bstream_test.go  chunk.go  chunk_test.go  varbit.go  varbit_test.go  xor.go
src/: chunk.rs  chunks.rs  crc32c.rs  errors.rs  folder.rs  histogram.rs  index.rs  lib.rs  series.rs  symbol_table.rs  toc.rs  uvarint.rs  varbit.rs  varbit_ts.rs  varbit_xor.rs  varint.rs  xor.rs
src/encoder/: chunk_encoder.rs  chunks_encoder.rs  histogram_encoder.rs  mod.rs  uvarint_encoder.rs  varbit_ts_encoder.rs  varbit_xor_encoder.rs  varint_encoder.rs  xor_encoder.rs
tests/: chunk-test  chunk_data.rs  index-test  index_data.rs  integration_tests.rs  test_data.json  test_data.rs
